# fermo_core_extras

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
fermo_core_extras/mibig_spectral_library/: README.md  README_MIBIG_SPECTRAL_LIB.md  main.py  mibig_3.1_spectral_library.mgf
fermo_core_extras/mibig_spectral_library/data/: mibig_spectral_library_3_1.mgf
fermo_core_extras/mibig_spectral_library/data_processing/: class_cfmid_manager.py  class_logger.py  class_parsing_manager.py  class_postprocessing_manager.py  class_preprocessing_manager.py  class_script_manager.py
tests/test_mibig_spectral_library/test_class_postprocessing_manager/: class_postprocessing_manager.py  test_class_postprocessing_manager.py  test_metadata.csv
