[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fermo_core_extras"
description = "Accessory tools for fermo core"
version = "0.1.0"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Koen van Ingen"},
    { name = "Mitja M. Zdouc", email = "zdoucmm@gmail.com" }
]

dependencies = [
    "argparse==1.4.0",
    "coloredlogs==15.0.1",
    "pydantic==2.5.2",
    "pandas==2.0.3",
]

[project.optional-dependencies]
dev = [
    "pre-commit==3.4.0",
    "pytest==7.4.2",
    "pytest-cov==4.1.0",
    "sphinx==7.1.0"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = [
  "fermo_core_extras"
]
