[tool.poetry]
name = "fermo_core_extras"
version = "0.1.0"
description = "Accessory tools for fermo core"
authors = [
    "Mitja M. Zdouc <zdoucmm@gmail.com>",
    "Koen van Ingen"
]
readme = "README.md"
license = "LICENSE"
repository = "https://github.com/mmzdouc/fermo_core_extras"
keywords = ["cheminformatics", "metabolomics", "genomics", "openData"]
exclude = [
    ".flake8",
    ".pre-commit-config.yaml",
]

[tool.poetry.dependencies]
argparse = "1.4.0"
coloredlogs = "15.0.1"
pandas = "2.0.3"
pydantic = "2.5.2"
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.0.0"
pre-commit = "^3.7.1"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[options.packages.find]
where = "fermo_core_extras"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.black]
line-length = 88
target-version = ["py311"]
exclude = '''
/(
    \.git
  | \.lib
)/
'''
